--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,8 @@
 baseURL = 'https://yourdevilfriends.art/'
 languageCode = 'en-us'
 title = 'Den of devils'
+paginate = 3
+
+[taxonomies]
+  featured_image = "featured_image"
+  tag = "tags"
